public/stylesheets/style.css
.center-aligned { text-align: center; }
.grayed-out { color: #808080 !important; }
.whitesmoke { background-color: #F5F5F5; }
.white { background-color: #FFFFFF; }
.link { cursor: pointer; }
.unpadded { padding: 0; }
.no-margin { margin: 0; }
.ellipsis {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}
body { letter-spacing: 0.03em; }
p { line-height: 1.6em; }

md-sidenav.sidemenu {
  min-width: 250px;
  width: 250px;
}
md-sidenav.sidemenu .logo {
  width: 100%;
}

md-toolbar.site-toolbar {
  background: #f6f6f6 !important;
  color: #202020 !important;
}
md-toolbar.site-toolbar:not(.md-menu-toolbar) md-icon,
md-toolbar.site-toolbar:not(.md-menu-toolbar) button {
  color: inherit;
}

.main-container { padding: 20px 5%; }
md-toolbar > .md-toolbar-tools-bottom { padding-left: 5%; }

.avatar {
  width: 50px;
  height: 50px;
  line-height: 50px;
  font-size: 20px;
  font-weight: bold;
  display: inline-block;
  text-align: center;
  background-color: #d6dadc;
  color: #4d4d4d;
  overflow: hidden;
  border-radius: 3px;
  margin-right: 10px;
}
.small.avatar {
  width: 30px;
  height: 30px;
  line-height: 30px;
  font-size: 14px;
  margin-right: 5px;
}
.avatar img {
  width: 100%;
  height: 100%;
}

.fade-down.ng-enter { animation: fadeInDown 0.5s; }
.fade-down.ng-leave { animation: fadeOutUp 0.5s; }
.fade.ng-enter { animation: fadeIn 0.5s; }
.fade.ng-leave { animation: fadeOut 0.5s; }

.fixed.md-fab { position: fixed !important; }

.list-toolbar { padding: 0 15px; }

.autocomplete li {
  border-bottom: 1px solid #ccc;
  height: auto;
  padding-top: 8px;
  padding-bottom: 8px;
}
.autocomplete li:last-child {
  border-bottom-width: 0;
}
.autocomplete .item-title,
.autocomplete .item-metadata {
  display: block;
  line-height: 1.5;
  white-space: normal;
}

.splitted ez-analyzer:first-child { margin-right: 5px; }
.splitted ez-analyzer:last-child { margin-left: 5px; }

/**
 * Fixes
 */

/* Fix autocomplete min width */
md-autocomplete { min-width: 0; }

/* Fix menu icon alignment in small toolbar */
md-toolbar .md-menu { padding: 0; }

/* Fix icon alignment for icon-buttons with href */
.md-icon-button[ng-href], .md-fab[ng-href] { display: inline-flex; }

